--- a/css/4-layout.css
+++ b/css/4-layout.css
@@ -45,7 +45,7 @@
   
   /* Full-width sections */
   .full-width-section {
-    width: 100vw;
+    width: 100%;
     margin-left: calc(-50vw + 50%);
     margin-right: calc(-50vw + 50%);
     box-sizing: border-box;
